Use reflection to access Java 9+ APIs in ModuleDescriptorRecommendation
This allows us to use 'options.release = 8' for Java compilation as
we do in other GradleX projects.